secp256k1-zkp-sys/depend/secp256k1-zkp/include/secp256k1.h


typedef struct secp256k1_zkp_context_struct secp256k1_zkp_context;
typedef struct {
    unsigned char data[64];
} secp256k1_zkp_pubkey;