secp256k1-zkp-sys/depend/secp256k1-zkp/include/secp256k1_musig.h


typedef struct {
    uint64_t magic;
    unsigned char pk_hash[32];
    int is_negated;
} secp256k1_zkp_musig_pre_session;
typedef struct {
    secp256k1_zkp_xonly_pubkey combined_pk;
    secp256k1_zkp_musig_pre_session pre_session;
    uint32_t n_signers;
    secp256k1_zkp_pubkey combined_nonce;
    int nonce_is_set;
    int nonce_is_negated;
    unsigned char msg[32];
    int msg_is_set;
    int has_secret_data;
    unsigned char seckey[32];
    unsigned char secnonce[32];
    secp256k1_zkp_pubkey nonce;
    unsigned char nonce_commitments_hash[32];
    int nonce_commitments_hash_is_set;
} secp256k1_zkp_musig_session;
typedef struct {
    int present;
    uint32_t index;
    secp256k1_zkp_pubkey nonce;
    unsigned char nonce_commitment[32];
} secp256k1_zkp_musig_session_signer_data;
typedef struct {
    unsigned char data[32];
} secp256k1_zkp_musig_partial_signature;
SECP256K1_API int secp256k1_zkp_musig_session_initialize_verifier(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_musig_session *session,
    secp256k1_zkp_musig_session_signer_data *signers,
    const unsigned char *msg32,
    const secp256k1_zkp_xonly_pubkey *combined_pk,
    const secp256k1_zkp_musig_pre_session *pre_session,
    const unsigned char *const *commitments,
    size_t n_signers
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4) SECP256K1_ARG_NONNULL(5) SECP256K1_ARG_NONNULL(6) SECP256K1_ARG_NONNULL(7);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int secp256k1_zkp_musig_set_nonce(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_musig_session_signer_data *signer,
    const secp256k1_zkp_pubkey *nonce
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int secp256k1_zkp_musig_session_combine_nonces(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_musig_session *session,
    const secp256k1_zkp_musig_session_signer_data *signers,
    size_t n_signers,
    int *nonce_is_negated,
    const secp256k1_zkp_pubkey *adaptor
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int secp256k1_zkp_musig_partial_signature_serialize(
    const secp256k1_zkp_context* ctx,
    unsigned char *out32,
    const secp256k1_zkp_musig_partial_signature* sig
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int secp256k1_zkp_musig_partial_signature_parse(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_musig_partial_signature* sig,
    const unsigned char *in32
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int secp256k1_zkp_musig_partial_sign(
    const secp256k1_zkp_context* ctx,
    const secp256k1_zkp_musig_session *session,
    secp256k1_zkp_musig_partial_signature *partial_sig
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int secp256k1_zkp_musig_partial_sig_verify(
    const secp256k1_zkp_context* ctx,
    const secp256k1_zkp_musig_session *session,
    const secp256k1_zkp_musig_session_signer_data *signer,
    const secp256k1_zkp_musig_partial_signature *partial_sig,
    const secp256k1_zkp_xonly_pubkey *pubkey
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4) SECP256K1_ARG_NONNULL(5);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int secp256k1_zkp_musig_partial_sig_combine(
    const secp256k1_zkp_context* ctx,
    const secp256k1_zkp_musig_session *session,
    unsigned char *sig64,
    const secp256k1_zkp_musig_partial_signature *partial_sigs,
    size_t n_sigs
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API int secp256k1_zkp_musig_partial_sig_adapt(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_musig_partial_signature *adaptor_sig,
    const secp256k1_zkp_musig_partial_signature *partial_sig,
    const unsigned char *sec_adaptor32,
    int nonce_is_negated
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);