secp256k1-zkp-sys/secp_bindings.rs

extern "C" {
    #[doc = " Initializes a verifier session that can be used for verifying nonce commitments"]
    #[doc = "  and partial signatures. It does not have secret key material and therefore can not"]
    #[doc = "  be used to create signatures."]
    #[doc = ""]
    #[doc = "  Returns: 1 when session is successfully initialized, 0 otherwise"]
    #[doc = "  Args:        ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "  Out:     session: the session structure to initialize (cannot be NULL)"]
    #[doc = "           signers: an array of signers' data to be initialized. Array length must"]
    #[doc = "                    equal to `n_signers`(cannot be NULL)"]
    #[doc = "  In:        msg32: the 32-byte message to be signed (cannot be NULL)"]
    #[doc = "       combined_pk: the combined xonly public key of all signers (cannot be NULL)"]
    #[doc = "       pre_session: pointer to a musig_pre_session struct from"]
    #[doc = "                    `musig_pubkey_combine` (cannot be NULL)"]
    #[doc = "         pk_hash32: the 32-byte hash of the signers' individual keys (cannot be NULL)"]
    #[doc = "       commitments: array of 32-byte nonce commitments. Array length must equal to"]
    #[doc = "                    `n_signers` (cannot be NULL)"]
    #[doc = "         n_signers: length of signers and commitments array. Number of signers"]
    #[doc = "                    participating in the MuSig. Must be greater than 0 and at most"]
    #[doc = "                    2^32 - 1."]
    pub fn secp256k1_zkp_musig_session_initialize_verifier(
        ctx: *const secp256k1_zkp_context,
        session: *mut secp256k1_zkp_musig_session,
        signers: *mut secp256k1_zkp_musig_session_signer_data,
        msg32: *const ::std::os::raw::c_uchar,
        combined_pk: *const secp256k1_zkp_xonly_pubkey,
        pre_session: *const secp256k1_zkp_musig_pre_session,
        commitments: *const *const ::std::os::raw::c_uchar,
        n_signers: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Checks a signer's public nonce against a commitment to said nonce, and update"]
    #[doc = "  data structure if they match"]
    #[doc = ""]
    #[doc = "  Returns: 1: commitment was valid, data structure updated"]
    #[doc = "           0: commitment was invalid, nothing happened"]
    #[doc = "  Args:      ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "          signer: pointer to the signer data to update (cannot be NULL). Must have"]
    #[doc = "                  been used with `musig_session_get_public_nonce` or initialized"]
    #[doc = "                  with `musig_session_initialize_verifier`."]
    #[doc = "  In:     nonce: signer's alleged public nonce (cannot be NULL)"]
    pub fn secp256k1_zkp_musig_set_nonce(
        ctx: *const secp256k1_zkp_context,
        signer: *mut secp256k1_zkp_musig_session_signer_data,
        nonce: *const secp256k1_zkp_pubkey,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Updates a session with the combined public nonce of all signers. The combined"]
    #[doc = " public nonce is the sum of every signer's public nonce."]
    #[doc = ""]
    #[doc = "  Returns: 1: nonces are successfully combined"]
    #[doc = "           0: a signer's nonce is missing"]
    #[doc = "  Args:        ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "           session: session to update with the combined public nonce (cannot be"]
    #[doc = "                    NULL)"]
    #[doc = "           signers: an array of signers' data, which must have had public nonces"]
    #[doc = "                    set with `musig_set_nonce`. Array length must equal to `n_signers`"]
    #[doc = "                    (cannot be NULL)"]
    #[doc = "         n_signers: the length of the signers array. Must be the total number of"]
    #[doc = "                    signers participating in the MuSig."]
    #[doc = "  Out: nonce_is_negated: a pointer to an integer that indicates if the combined"]
    #[doc = "                    public nonce had to be negated."]
    #[doc = "           adaptor: point to add to the combined public nonce. If NULL, nothing is"]
    #[doc = "                    added to the combined nonce."]
    pub fn secp256k1_zkp_musig_session_combine_nonces(
        ctx: *const secp256k1_zkp_context,
        session: *mut secp256k1_zkp_musig_session,
        signers: *const secp256k1_zkp_musig_session_signer_data,
        n_signers: size_t,
        nonce_is_negated: *mut ::std::os::raw::c_int,
        adaptor: *const secp256k1_zkp_pubkey,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Serialize a MuSig partial signature or adaptor signature"]
    #[doc = ""]
    #[doc = "  Returns: 1 when the signature could be serialized, 0 otherwise"]
    #[doc = "  Args:    ctx: a secp256k1 context object"]
    #[doc = "  Out:   out32: pointer to a 32-byte array to store the serialized signature"]
    #[doc = "  In:      sig: pointer to the signature"]
    pub fn secp256k1_zkp_musig_partial_signature_serialize(
        ctx: *const secp256k1_zkp_context,
        out32: *mut ::std::os::raw::c_uchar,
        sig: *const secp256k1_zkp_musig_partial_signature,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Parse and verify a MuSig partial signature."]
    #[doc = ""]
    #[doc = "  Returns: 1 when the signature could be parsed, 0 otherwise."]
    #[doc = "  Args:    ctx: a secp256k1 context object"]
    #[doc = "  Out:     sig: pointer to a signature object"]
    #[doc = "  In:     in32: pointer to the 32-byte signature to be parsed"]
    #[doc = ""]
    #[doc = "  After the call, sig will always be initialized. If parsing failed or the"]
    #[doc = "  encoded numbers are out of range, signature verification with it is"]
    #[doc = "  guaranteed to fail for every message and public key."]
    pub fn secp256k1_zkp_musig_partial_signature_parse(
        ctx: *const secp256k1_zkp_context,
        sig: *mut secp256k1_zkp_musig_partial_signature,
        in32: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Produces a partial signature"]
    #[doc = ""]
    #[doc = "  Returns: 1: partial signature constructed"]
    #[doc = "           0: session in incorrect or inconsistent state"]
    #[doc = "  Args:         ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "            session: active signing session for which the combined nonce has been"]
    #[doc = "                     computed (cannot be NULL)"]
    #[doc = "  Out:  partial_sig: partial signature (cannot be NULL)"]
    pub fn secp256k1_zkp_musig_partial_sign(
        ctx: *const secp256k1_zkp_context,
        session: *const secp256k1_zkp_musig_session,
        partial_sig: *mut secp256k1_zkp_musig_partial_signature,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Checks that an individual partial signature verifies"]
    #[doc = ""]
    #[doc = "  This function is essential when using protocols with adaptor signatures."]
    #[doc = "  However, it is not essential for regular MuSig's, in the sense that if any"]
    #[doc = "  partial signatures does not verify, the full signature will also not verify, so the"]
    #[doc = "  problem will be caught. But this function allows determining the specific party"]
    #[doc = "  who produced an invalid signature, so that signing can be restarted without them."]
    #[doc = ""]
    #[doc = "  Returns: 1: partial signature verifies"]
    #[doc = "           0: invalid signature or bad data"]
    #[doc = "  Args:         ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "            session: active session for which the combined nonce has been computed"]
    #[doc = "                     (cannot be NULL)"]
    #[doc = "             signer: data for the signer who produced this signature (cannot be NULL)"]
    #[doc = "  In:   partial_sig: signature to verify (cannot be NULL)"]
    #[doc = "             pubkey: public key of the signer who produced the signature (cannot be NULL)"]
    pub fn secp256k1_zkp_musig_partial_sig_verify(
        ctx: *const secp256k1_zkp_context,
        session: *const secp256k1_zkp_musig_session,
        signer: *const secp256k1_zkp_musig_session_signer_data,
        partial_sig: *const secp256k1_zkp_musig_partial_signature,
        pubkey: *const secp256k1_zkp_xonly_pubkey,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Combines partial signatures"]
    #[doc = ""]
    #[doc = "  Returns: 1: all partial signatures have values in range. Does NOT mean the"]
    #[doc = "              resulting signature verifies."]
    #[doc = "           0: some partial signature had s/r out of range"]
    #[doc = "  Args:         ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "            session: initialized session for which the combined nonce has been"]
    #[doc = "                     computed (cannot be NULL)"]
    #[doc = "  Out:        sig64: complete signature (cannot be NULL)"]
    #[doc = "  In:  partial_sigs: array of partial signatures to combine (cannot be NULL)"]
    #[doc = "             n_sigs: number of signatures in the partial_sigs array"]
    pub fn secp256k1_zkp_musig_partial_sig_combine(
        ctx: *const secp256k1_zkp_context,
        session: *const secp256k1_zkp_musig_session,
        sig64: *mut ::std::os::raw::c_uchar,
        partial_sigs: *const secp256k1_zkp_musig_partial_signature,
        n_sigs: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Converts a partial signature to an adaptor signature by adding a given secret"]
    #[doc = "  adaptor."]
    #[doc = ""]
    #[doc = "  Returns: 1: signature and secret adaptor contained valid values"]
    #[doc = "           0: otherwise"]
    #[doc = "  Args:         ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "  Out:  adaptor_sig: adaptor signature to produce (cannot be NULL)"]
    #[doc = "  In:   partial_sig: partial signature to tweak with secret adaptor (cannot be NULL)"]
    #[doc = "      sec_adaptor32: 32-byte secret adaptor to add to the partial signature (cannot"]
    #[doc = "                     be NULL)"]
    #[doc = "   nonce_is_negated: the `nonce_is_negated` output of `musig_session_combine_nonces`"]
    pub fn secp256k1_zkp_musig_partial_sig_adapt(
        ctx: *const secp256k1_zkp_context,
        adaptor_sig: *mut secp256k1_zkp_musig_partial_signature,
        partial_sig: *const secp256k1_zkp_musig_partial_signature,
        sec_adaptor32: *const ::std::os::raw::c_uchar,
        nonce_is_negated: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
